<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS Lab Helper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name:</string>
    <string name="insertName">Insert Name Here</string>
    <string name="okay">Okay</string>
    <string name="Class">Class:</string>
    <string name="day">Day:</string>
    <string name="time">Time:</string>
    <string name="viewAll">View All</string>
    <string-array name="classArray">
        <item >CS180</item>
        <item >CS182</item>
        <item >CS240</item>
        <item >CS250</item>
        <item >CS251</item>
        <item >CS252</item>
    </string-array>
     <string-array name="timeArray1">
        <item >8:30 a.m.</item>
        <item >9:30 a.m.</item>
        <item >10:30 a.m.</item>
        <item >11:30 a.m.</item>
        <item >12:30 p.m.</item>
        <item >1:30 p.m.</item>
        <item >2:30 p.m.</item>
        <item >3:30 p.m.</item>
        <item >4:30 p.m.</item>  
    </string-array>
    <string-array name="dayArray1">
        <item >Monday</item>
        <item >Tuesday</item>
        <item >Wednesday</item>
        <item >Thursday</item>
        <item >Friday</item>
    </string-array>
    <string-array name="timeArray">
         <item >Any Time </item>
        <item >8:30 a.m.</item>
        <item >9:30 a.m.</item>
        <item >10:30 a.m.</item>
        <item >11:30 a.m.</item>
        <item >12:30 p.m.</item>
        <item >1:30 p.m.</item>
        <item >2:30 p.m.</item>
        <item >3:30 p.m.</item>
        <item >4:30 p.m.</item>  
    </string-array>
    <string-array name="dayArray">
        <item >Any Day</item>
        <item >Monday</item>
        <item >Tuesday</item>
        <item >Wednesday</item>
        <item >Thursday</item>
        <item >Friday</item>
    </string-array>
    <string name="title_activity_list_activity">MyListActivity</string>
    <string name="title_activity_result">ResultScreen</string>

</resources>
