<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/csLabHelper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/nameTextBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameText"
        android:layout_alignBottom="@+id/nameText"
        android:layout_marginLeft="29dp"
        android:layout_toRightOf="@+id/nameText"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/insertName"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/classSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameTextBox"
        android:layout_alignTop="@+id/classText"
        android:layout_below="@id/nameTextBox"
        android:entries="@array/classArray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dayText"
        android:layout_below="@+id/classSpinner"
        android:ems="10"
        android:inputType="none"
        android:text="@string/time"
        android:textSize="12sp"
        android:width="60sp" />

    <Spinner
        android:id="@+id/timeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/classSpinner"
        android:layout_alignTop="@+id/timeText"
        android:entries="@array/timeArray"
        android:textSize="12sp" />
    
     <Spinner
        android:id="@+id/timeSpinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/classSpinner"
        android:layout_alignTop="@+id/timeView"
        android:entries="@array/timeArray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/dayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/classText"
        android:layout_below="@+id/timeSpinner"
        android:ems="10"
        android:inputType="none"
        android:text="@string/day"
        android:textSize="12sp"
        android:width="60sp" />

    <Spinner
        android:id="@+id/daySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeSpinner"
        android:layout_below="@+id/timeSpinner"
        android:entries="@array/dayArray"
        android:textSize="12sp" />
    
      <Spinner
        android:id="@+id/daySpinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeSpinner"
        android:layout_below="@+id/timeSpinner2"
        android:entries="@array/dayArray"
        android:textSize="12sp" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/daySpinner"
        android:layout_below="@+id/daySpinner"
        android:text="@string/okay"
        android:onClick="okayPushed"
        android:textSize="12sp" />

    <Button
        android:id="@+id/viewAllButon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sendButton"
        android:layout_alignBottom="@+id/sendButton"
        android:layout_toLeftOf="@+id/sendButton"
        android:minHeight="40dp"
        android:text="@string/viewAll"
        android:onClick="viewAllClicked"
        android:textSize="12sp" />
    
    <Button
        android:id="@+id/viewButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/daySpinner2"
        android:layout_below="@+id/daySpinner2"
        android:text="View"
        android:onClick="viewClicked"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dayText"
        android:layout_below="@+id/viewAllButon"
        android:layout_marginTop="88dp"
        android:textSize="12sp"
        android:text="Time:" />

    <TextView
        android:id="@+id/dayView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeView"
        android:layout_below="@+id/timeSpinner2"
        android:textSize="12sp"
        android:text="Day:" />

    <TextView
        android:id="@+id/classText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText"
        android:layout_marginTop="28dp"
        android:layout_toLeftOf="@+id/nameTextBox"
        android:ems="10"
        android:inputType="none"
        android:text="@string/Class"
        android:textSize="12sp"
        android:width="60dp" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="text|none"
        android:text="@string/name"
        android:textSize="12sp" />

</RelativeLayout>